html,css,js,이미지수정
01-11 오전3:40

--- a/me/me (DESKTOP-D8NTC7C의 충돌된 사본 2021-01-09).html
+++ b/me/me (DESKTOP-D8NTC7C의 충돌된 사본 2021-01-09).html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="../assets/css/font.css">
 
     <script src="../assets/js/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/jquery-ui.min.js"></script>
     <script src="../assets/js/common.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/aboutme.js"></script>
-
+    <script src="../assets/js/style.js"></script>
 </head>
 <body>
     <div id="skip"><a href="#me">본문 바로가기</a></div>
@@ -58,12 +57,12 @@
                     <p id="txt4">원래 여행이나 야외활동을 좋아하는데 코로나19 사태로 인해 집에 있는 시간이 많아지면서 '영상 만들기'와 '비즈 공예'라는 새로운 취미를 갖게되었습니다.</p>
                 </div>
                 <div class="video">
-                    <iframe type="text/html" src="https://www.youtube.com/embed/DEnpLPTmMi0?autoplay=1&loop=1&modestbranding=1" title="도형을 활용한 모션그래픽">이 브라우저는 iframe을 지원하지 않습니다</iframe>
+                    <iframe src="https://youtu.be/DEnpLPTmMi0" title="도형을 활용한 모션그래픽">이 브라우저는 iframe을 지원하지 않습니다</iframe>
                     <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw">youtube 놀러가기</a>
                 </div>
             </div>
         </article>
-        <article id="skill" tabindex="0">
+        <article id="skill">
             <div class="w1400 tit_wrap">
                 <h2 class="tit">SKILL</h2>
                 <span>제가 잘하는 일을 소개합니다</span>
@@ -106,10 +105,10 @@
                     </div>
                     <p id="jump">JUMP</p>
                     <div class="guide">
-                        <p>깜박이는 방향키를 따라 눌러보세요</p>
+                        <p>키보드로 원을 움직여보세요</p>
                         <div class="keyboard">
                             <div class="up"><img src="../assets/images/icon/up_gray.svg" alt="위 방향키"></div>
-                            <div class="right click"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
+                            <div class="right"><img src="../assets/images/icon/up_gray.svg" alt="오른쪽 방향키"></div>
                             <div class="down"><img src="../assets/images/icon/up_gray.svg" alt="아래 방향키"></div>
                             <div class="left"><img src="../assets/images/icon/up_gray.svg" alt="왼쪽 방향키"></div>
                             <div class="spacebar">space bar</div>
@@ -118,8 +117,8 @@
                 </div>
             </div>
             <div class="movetxt">
-                <marquee class="full" scrollamount=10  >HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</marquee>
-                <marquee class="line" scrollamount=10 direction=right>HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</marquee>
+                <marquee class="full" scrollamount=10  >HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</marquee>
+                <marquee class="line" scrollamount=10 direction=right>HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHURB</marquee>
             </div>
         </article>
     </section>
