--- a/project/kids_info.html
+++ b/project/kids_info.html
@@ -24,7 +24,7 @@
             <div class="w1400">
                 <h3 class="tit">PROJECT03. 키즈빌리지AR:수학여행</h3>
                 <div class="cnt1">
-                    <ul>
+                    <ul class="clearfix">
                         <li><img src="../assets/images/portfolio/main.png" alt="키즈빌리지AR의 메인화면"></li>
                         <li><img src="../assets/images/portfolio/info.png" alt="키즈빌리지AR의 캐릭터 정보 화면"></li>
                         <li><img src="../assets/images/portfolio/toy.png" alt="키즈빌리지AR의 카드뒤집기 게임화면"></li>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="feature">
                     <h4 class="subtit">특징</h4>
-                    <ul>
+                    <ul class="clearfix">
                         <li>
                             <img src="../assets/images/portfolio/char1.svg" alt="">
                             <p>누리과정  수학영역을 모바일 게임에 접목</p>
@@ -57,7 +57,7 @@
                     <h4 class="subtit">사용 흐름도(Flow chart)</h4>
                     <div><img src="../assets/images/portfolio/flowchart.svg" alt="시작,인증,튜토리얼,메인화면에서 4가지 선택사항 중 AR학습을 클릭하면 장소와 유형을 선택,문제풀기,정답을 맞추면 보상을 받고 오답이면 다시 문제를 푼다"></div>
                 </div>
-                <div class="design">
+                <div class="design clearfix">
                     <h4 class="subtit">디자인 컨셉(Design concept)</h4>
                     <div class="color">
                         <strong>Color</strong>
@@ -91,7 +91,6 @@
                             <p class="small">키즈빌리지AR:수학여행</p>
                         </div>
                     </div>
-
                 </div>
                 <div class="parish">
                     <h4 class="subtit">교구 설명</h4>
@@ -126,9 +125,9 @@
                         </div>
                     </div>
                     <div class="four">
-                        <img src="../assets/images/portfolio/sinbak.png" alt="노란피부에 빨간색 멜빵바지를 입고 야구모자를 쓰고있는 고양이 캐릭터가 양팔을 벌리고 두발로 서있다">
                         <strong>FULL 영상을 확인하세요~</strong>
                         <a href="http://dm.swu.ac.kr/graduate2020/sub16.html" class="sitego" target="_blank">FULL영상 보기</a>
+                        <img src="../assets/images/portfolio/sinbak.png" alt="노란피부에 빨간색 멜빵바지를 입고 야구모자를 쓰고있는 고양이 캐릭터가 양팔을 벌리고 두발로 서있다">
                     </div>
                 </div>
             </div>
