--- a/project/project.html
+++ b/project/project.html
@@ -20,7 +20,7 @@
 
     <header id="header" class="head"></header>
 
-    <section id="projectCnt">
+    <section id="projectCnt" class="p_cnt">
         <article id="cntA" class="w1400">
             <p class="right">지금까지 저의 </p>
             <p class="left">작업물을 소개합니다</p>
