--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul id="indexGnb">
                     <li><a href="me/me.html">ABOUT ME</a></li>
                     <li><a href="project/project.html">PROJECT</a></li>
-                    <li><a href="report/report">REPORT</a></li>
+                    <li><a href="report/report.html">REPORT</a></li>
                 </ul>
             </div>
         </article>
