--- a/me/me.html
+++ b/me/me.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title> ABOUT ME </title>
-    <link rel="stylesheet" href="../assets/css/jquery-ui.css">
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -123,11 +122,6 @@
             </div>
         </article>
     </section>
-    <footer id="footer">
-        <div class="link">
-            <a href="https://github.com/NamHyunJu">Git hub</a>
-            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
 </body>
 </html>
