--- a/report/report.html
+++ b/report/report.html
@@ -35,7 +35,7 @@
                     <li>① 이미지 등 텍스트가 아닌 콘텐츠를 이용할 경우, 그 의미나 용도를 해당 이미지와 동등하게 인식할 수 있도록 적절한 대체 텍스트를 간단명료하게 제공해야 한다.</li>
                     <li>② 단순히 장식이나 시각적인 형태를 위해 사용되는 콘텐츠의 경우, 보조 기술을 통해 해당 설명을 제공받을 때 오히려 혼란을 일으킬 가능성이 있으므로 대체 텍스트를 공백문자로 제공하는 것이 바람직하다.</li>
                 </ul>
-                <div class="img"><img src="../assets/images/report/img01.png" alt="alt속성이 비어있거나 적절한 대체 텍스트를 적은곳에 초록색 박스로 표시 되어있다"></div>
+                <div class="img img1"><img src="../assets/images/report/img01.png" alt="alt속성이 비어있거나 적절한 대체 텍스트를 적은곳에 초록색 박스로 표시 되어있다"></div>
                 <strong>1.3 명료성</strong>
                 <p>콘텐츠는 명확하게 전달되어야 한다.</p>
                 <ul>
@@ -44,7 +44,7 @@
                     <li>③ 지시 사항은 모양, 크기, 위치, 방향, 색, 소리 등에 관계없이 인식될 수 있어야 한다.</li>
                     <li>④ 이웃한 콘텐츠는 구별될 수 있어야 한다.</li>
                 </ul>
-                <div class="img"><img src="../assets/images/report/img02.png" alt=""></div>
+                <div class="img img2"><img src="../assets/images/report/img02.png" alt=""></div>
             </div>
             <div role="tabpanel" class="tabpanel" id="tabpanel2" aria-labelledby="tab2">
                 <strong>2.1 입력장치 접근성</strong>
@@ -54,14 +54,14 @@
                     <li>② 키보드 내비게이션 과정에서 키보드 초점을 받은 링크, 컨트롤 및 입력 서식은 초점을 받지 않은 객체들로부터 구분될 수 있어야 한다.</li>
                     <li>③ Tab 키와 Shift + Tab 키에 의한 초점의 이동 순서는 논리적이며 일관성이 있어야 한다.</li>
                 </ul>
-                <div class="img"><img src="../assets/images/report/img03.png" alt="li태그에 tabindex를 준 곳에 초록색 박스로 표시되어 있다"></div>
+                <div class="img img3"><img src="../assets/images/report/img03.png" alt="li태그에 tabindex를 준 곳에 초록색 박스로 표시되어 있다"></div>
                 <strong>2.2 충분한 시간 제공 / 정지 기능 제공</strong>
                 <p>콘텐츠를 읽고 사용하는 데 충분한 시간을 제공, 자동으로 변경되는 콘텐츠는 움직임을 제어할 수 있어야 한다.</p>
                 <ul>
                     <li>① 시간제한이 있는 콘텐츠는 시간적인 제약이 있음을 사용자에게 반드시 알려주어야 한다.</li>
                     <li>② 웹 콘텐츠는 사용자가 이동이나 스크롤을 일시 정지시키거나 지나간 콘텐츠 또는 앞으로 나타날 콘텐츠를 사용할 수 있도록 제공한다.</li>
                 </ul>
-                <div class="img"><img src="../assets/images/report/img04.png" alt="일시정지,콘텐츠 이동 버튼이 있는 곳에 초록색 박스로 표시되어 있다"></div>
+                <div class="img img4"><img src="../assets/images/report/img04.png" alt="일시정지,콘텐츠 이동 버튼이 있는 곳에 초록색 박스로 표시되어 있다"></div>
                 <strong>2.4 쉬운 내비게이션</strong>
                 <p>콘텐츠는 쉽게 내비게이션 할 수 있어야 한다.</p>
                 <ul>
@@ -70,7 +70,7 @@
                     <li>③ 프레임의 경우 아무런 내용이 없는 프레임이라면 "빈 프레임" 등으로 제목을 제공해야 한다.</li>
                     <li>④ 링크 텍스트를 직관적이고 의미 있게 구성하고, 또한 주변 맥락을 통해서도 용도나 목적지를 명확히 이해 할 수 있게 제공해야 한다.</li>
                 </ul>
-                <div class="img">
+                <div class="img img5">
                     <img src="../assets/images/report/img05.png" alt="본문바로가기 텍스트에 초록색 박스로 표시되어 있다">
                     <img src="../assets/images/report/img07.png" alt="포커스가 되어있는 패밀리사이트에 초록색 박스로 표시되어 있다">
                     <img src="../assets/images/report/img06.png" alt="">
@@ -83,14 +83,14 @@
                     <li>① 사용자가 인지하지 못한 상황에서 새 창, 팝업 창 등을 제공하지 않아야 한다.</li>
                     <li>② 사용자가 의도하지 않은 기능(새 창, 초점에 의한 맥락 변화 등)은 실행되지 않아야 한다.</li>
                 </ul>
-                <div class="img"><img src="../assets/images/report/img08.png" alt="모달창이 열린다는것을 알려주는 코드부분에 초록색 박스로 표시되어 있다"></div>
+                <div class="img img6"><img src="../assets/images/report/img08.png" alt="모달창이 열린다는것을 알려주는 코드부분에 초록색 박스로 표시되어 있다"></div>
                 <strong>3.3 콘텐츠의 논리성</strong>
                 <p>콘텐츠는 논리적으로 구성해야 한다.</p>
                 <ul>
                     <li>① 화면 낭독 프로그램과 같은 보조 기기는 전체 콘텐츠를 보통 소스 코드 순서대로 풀어서 접근하므로 콘텐츠는 논리적인 순서로 제공해야한다.</li>
                     <li>② 복잡한 데이터를 표로 제공할 경우, 시각장애인 등도 이해할 수 있도록 표의 이해를 돕기 위한 내용 및 구조에 대한 정보를 제공해야 한다.</li>
                 </ul>
-                <div class="img">
+                <div class="img img7">
                     <img src="../assets/images/report/img3-1.PNG" alt="">
                     <img src="../assets/images/report/img3-2.PNG" alt="">
                 </div>
@@ -100,7 +100,7 @@
                     <li>① 입력 서식을 사용할 때 현재 위치에 대한 정확한 안내, 특정한 서식으로의 빠른 이동, 정확한 맥락의 제공, 입력할 값의 범위에 대한 안내, 오류를 방지하거나 복구할 수 있는 방법 제공, 작업을 다시 하거나 취소할 수 있는 방법 제공, 충분한 시간적 여유를 제공 등을 통해 장애인의 서식 접근성을 확보할 수 있도록 해야한다.</li>
                     <li>② 입력 서식 작성 시 오류가 발생하지 않도록 미리 어떤 값을 넣어야 하는지 안내를 해주고, 만약 그래도 실수로 오류가 발생하는 경우, 어디에서 어떤 오류가 났는지 사용자가 알 수 있어야 하고, 이를 정정할 수 있는 방법을 제공해야 한다.</li>
                 </ul>
-                <div class="img">
+                <div class="img img8">
                     <img src="../assets/images/report/img09.png" alt="">
                     <img src="../assets/images/report/img10.png" alt="">
                 </div>
@@ -109,7 +109,7 @@
                 <strong>4.1 문법 준수</strong>
                 <p>웹 콘텐츠는 마크업 언어의 문법을 준수해야 한다.</p>
                 <p>① 콘텐츠를 개발하는 과정에서 마크업 언어의 표준을 준수하고 가능한 한 문법적 오류나 모호성이 없도록 구현되어야 한다.</p>
-                <div class="img"><img src="../assets/images/report/img11.PNG" alt="OpenWAX 100점"></div>
+                <div class="img img9"><img src="../assets/images/report/img11.PNG" alt="OpenWAX 100점"></div>
             </div>
         </article>
     </section>
