--- a/common.html
+++ b/common.html
@@ -14,12 +14,12 @@
                 <li><a href="../index.html" class="first">HOME</a></li>
                 <li><a href="../me/me.html">ABOUT ME</a></li>
                 <li><a href="../project/project.html">PROJECT</a></li>
-                <li><a href="../report/report.html">REPORT</a></li>
+                <li><a href="../report/report.html" title="접근성 보고서">REPORT</a></li>
             </ul>
             <button class="gnb_close_btn last" type="button" title="네비게이션 닫기">
             </button>
         </nav>
-        <p class="email"><span class="blind">이메일 주소</span>nam_guswn9845@naver.com</p>
+        <a class="email" href="mailto:nam_guswn9845@naver.com" title="메일 보내기"><span class="blind">이메일 주소</span>nam_guswn9845@naver.com</a>
     </div>
     <div class="footer">
         <div class="link">
