--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="skip"><a href="#cnt1">본문 바로가기</a></div>
     <header id="header">
         <h1 class="logo"><a href="index.html">HyunJu's Portfolio</a></h1>
-        <p class="email"><span class="blind">이메일</span>nam_guswn9845@naver.com</p>
+        <a class="email" href="mailto:nam_guswn9845@naver.com" title="메일 보내기"><span class="blind">이메일</span>nam_guswn9845@naver.com</a>
     </header>
 
     <section id="content">
@@ -44,7 +44,7 @@
         </article>
         <article id="cnt3">
             <p>저에대해 더 궁금하고<br>함께 나누고 싶은 이야기가 있으시다면</p>
-            <strong>nam_guswn9845@naver.com</strong>
+            <a href="mailto:nam_guswn9845@naver.com" title="메일 보내기">nam_guswn9845@naver.com</a>
             <p>언제든지 편한시간에 연락주세요!</p>
         </article>
     </section>
