--- a/me/me.html
+++ b/me/me.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="video">
                     <iframe type="text/html" src="https://www.youtube.com/embed/DEnpLPTmMi0?autoplay=1&loop=1&modestbranding=1" title="도형을 활용한 모션그래픽">이 브라우저는 iframe을 지원하지 않습니다</iframe>
-                    <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw">youtube 놀러가기</a>
+                    <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw" target="_blank">youtube 놀러가기</a>
                 </div>
             </div>
         </article>
