--- a/project/project.html
+++ b/project/project.html
@@ -55,12 +55,12 @@
             <div id="jaenung_info" class="info p_r">
                 <div class="w1400">
                     <h3 class="tit">PROJECT01. 재능교육</h3>
-                    <p>주요 타켓층의 연령대에 맞도록 리디자인 하였고, Markup/css/jQuery를 통해 기존 사이트에서 접근성을 지키지못한 부분을 보완하였습니다.</p>
+                    <p class="fade up">주요 타켓층의 연령대에 맞도록 리디자인 하였고, Markup/css/jQuery를 통해 기존 사이트에서 접근성을 지키지못한 부분을 보완하였습니다.</p>
                     <div class="design">
                         <h4 class="subtit">디자인 컨셉(Design concept)</h4>
                         <div class="color">
                             <strong>Color</strong>
-                            <p>재능교육의 대표색인 빨간색을 활용하여 사용하였습니다</p>
+                            <p class="fade up">재능교육의 대표색인 빨간색을 활용하여 사용하였습니다</p>
                             <ul>
                                 <li><span class="blind">빨간색</span>#E60417</li>
                                 <li><span class="blind">주황색</span>#FF7800</li>
@@ -69,15 +69,15 @@
                         </div>
                         <div class="font">
                             <strong>Fonts</strong>
-                            <p>가독성을 위해 2가지의 폰트를 사용하였습니다</p>
+                            <p class="fade up">가독성을 위해 2가지의 폰트를 사용하였습니다</p>
                             <div>
-                                <div class="left">
+                                <div class="left fade fd_right">
                                     <p class="title">제목</p>
                                     <p class="f_name">#여기어때 잘난체</p>
                                     <p class="big">JEI 재능교육 스스로</p>
                                     <p class="small">JEI 재능교육 스스로</p>
                                 </div>
-                                <div class="right">
+                                <div class="right fade fd_left">
                                     <p class="title">본문</p>
                                     <p class="f_name">#Noto Sans KR</p>
                                     <p class="big">JEI 재능교육 스스로</p>
@@ -91,17 +91,17 @@
                         <div class="flex">
                             <div class="left">
                                 <img src="../assets/images/portfolio/jaenung1.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/jaenungA.png" alt="" class="circle fade down">
                                 <p>각 태그에 알맞은 role,property,aria속성을 기입</p>
                             </div>
                             <div class="mid">
                                 <img src="../assets/images/portfolio/jaenung2.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/jaenungB.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/jaenungB.png" alt="" class="circle fade down">
                                 <p>form의 유효성 확인을 위해 정규표현식을 사용</p>
                             </div>
                             <div class="right">
                                 <img src="../assets/images/portfolio/jaenung3.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/jaenungC.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/jaenungC.png" alt="" class="circle fade down">
                                 <p>switch문으로 키보드 제어</p>
                                 <p>포커스 제어를 위해 tabIndex와 focus()를 사용</p>
                             </div>
@@ -139,12 +139,12 @@
                 <div class="w1400">
                     <h3 class="tit">PROJECT02. WHAT</h3>
                     <h4 class="subtit">주제</h4>
-                    <p>다양한 분야의 아티스트들의 재능기부 활동을 소개하고 함께 활동 할 팀원 모집 및 후원금 모으기를 홍보하는 웹페이지 기획</p>
+                    <p class="fade up">다양한 분야의 아티스트들의 재능기부 활동을 소개하고 함께 활동 할 팀원 모집 및 후원금 모으기를 홍보하는 웹페이지 기획</p>
                     <div class="design">
                         <h4 class="subtit">디자인 컨셉(Design concept)</h4>
                         <div class="color">
                             <strong>Color</strong>
-                            <p>black&amp;white 컨셉이지만 눈의 피로를 적게하기 위해 진한 gray색을 사용하였습니다</p>
+                            <p class="fade up">black&amp;white 컨셉이지만 눈의 피로를 적게하기 위해 진한 gray색을 사용하였습니다</p>
                             <ul>
                                 <li><span class="blind">검은색</span>#282828</li>
                                 <li><span class="blind">흰색</span>#F6F4F4</li>
@@ -153,15 +153,15 @@
                         </div>
                         <div class="font">
                             <strong>Fonts</strong>
-                            <p>디자인컨셉에 맞게 고딕체를 사용하였습니다</p>
+                            <p class="fade up">디자인컨셉에 맞게 고딕체를 사용하였습니다</p>
                             <div>
-                                <div class="left">
+                                <div class="left fade fd_right">
                                     <p class="title">Point</p>
                                     <p class="f_name">#Cormorant</p>
                                     <p class="big">WHAT 재능기부</p>
                                     <p class="small">WHAT 재능기부</p>
                                 </div>
-                                <div class="right">
+                                <div class="right fade fd_right">
                                     <p class="title">본문</p>
                                     <p class="f_name">#Poppins</p>
                                     <p class="big">WHAT 재능기부</p>
@@ -175,17 +175,17 @@
                         <div class="flex">
                             <div class="left">
                                 <img src="../assets/images/portfolio/what1.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/whatA.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/whatA.png" alt="" class="circle fade down">
                                 <p>HTML5를 사용하여 의미있는 마크업을 하여 사용자가 보다 사용하고 이해하기 쉽도록 구성</p>
                             </div>
                             <div class="mid">
                                 <img src="../assets/images/portfolio/what2.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/whatB.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/whatB.png" alt="" class="circle fade down">
                                 <p>조건문을 통해 키보드 제어 접근성을 지키고, 네비게이션 안에서만 포커스가 이동하도록 제어</p>
                             </div>
                             <div class="right">
                                 <img src="../assets/images/portfolio/what3.PNG" alt="" class="bg">
-                                <img src="../assets/images/portfolio/whatC.png" alt="" class="circle">
+                                <img src="../assets/images/portfolio/whatC.png" alt="" class="circle fade down">
                                 <p>스크롤 이벤트와 fade효과를 통해 지루하지 않도록 효과를 줌</p>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                             <li><img src="../assets/images/portfolio/toy.png" alt="키즈빌리지AR의 카드뒤집기 게임화면"></li>
                         </ul>
                         <h4 class="subtit">주제</h4>
-                        <p>만 5~8세  대상 3D 애니메이션을 활용한 AR 기반 앱과 실물교구(AR인식  폼보드 장소 교구와 3D프린팅 동전, 지폐)를 통해 수의 개념과 관련된 학습 능력, 논리력, 사고력 증진을 돕는 프로그램 기획</p>
+                        <p class="fade up">만 5~8세  대상 3D 애니메이션을 활용한 AR 기반 앱과 실물교구(AR인식  폼보드 장소 교구와 3D프린팅 동전, 지폐)를 통해 수의 개념과 관련된 학습 능력, 논리력, 사고력 증진을 돕는 프로그램 기획</p>
                     </div>
                     <div class="feature">
                         <h4 class="subtit">특징</h4>
@@ -261,7 +261,7 @@
                         <h4 class="subtit">디자인 컨셉(Design concept)</h4>
                         <div class="color">
                             <strong>Color</strong>
-                            <p>고대비의 컬러풀한 색을 사용하였습니다</p>
+                            <p class="fade up">고대비의 컬러풀한 색을 사용하였습니다</p>
                             <p>Main</p>
                             <ul class="main">
                                 <li><span class="blind">연한 주황색</span>#ffaf45</li>
@@ -277,14 +277,14 @@
                         </div>
                         <div class="font">
                             <strong>Fonts</strong>
-                            <p>가독성을 위해 2가지의 폰트를 사용하였습니다</p>
-                            <div class="left">
+                            <p class="fade up">가독성을 위해 2가지의 폰트를 사용하였습니다</p>
+                            <div class="left fade fd_right">
                                 <p class="title">제목</p>
                                 <p class="f_name">#여기어때 잘난체</p>
                                 <p class="big">키즈빌리지AR:수학여행</p>
                                 <p class="small">키즈빌리지AR:수학여행</p>
                             </div>
-                            <div class="right">
+                            <div class="right fade fd_left">
                                 <p class="title">본문</p>
                                 <p class="f_name">#Noto Sans CJK KR</p>
                                 <p class="big">키즈빌리지AR:수학여행</p>
@@ -296,9 +296,9 @@
                         <h4 class="subtit">교구 설명</h4>
                         <div class="one">
                             <div class="txt">
-                                <p>유아의 <span class="f_orange">인터렉티브한 학습</span>을 위해 다양한 <span class="f_orange">교구</span>를 직접 제작하여 게임에 활용 할 수 있도록 하였습니다.</p>
-                                <p><span class="f_orange">이용설명서와 튜토리얼 영상</span>을 제작하여 사용자가 게임을 보다 쉽고 빠르게 할 수 있도록 하였습니다.</p>
-                                <p>또한 한글을 읽지 못하는 유아를 위해 <span class="f_orange">녹음</span>을 하여 게임을 진행 할 수 있도록 하였습니다.</p>
+                                <p class="fade up">유아의 <span class="f_orange">인터렉티브한 학습</span>을 위해 다양한 <span class="f_orange">교구</span>를 직접 제작하여 게임에 활용 할 수 있도록 하였습니다.</p>
+                                <p class="fade up"><span class="f_orange">이용설명서와 튜토리얼 영상</span>을 제작하여 사용자가 게임을 보다 쉽고 빠르게 할 수 있도록 하였습니다.</p>
+                                <p class="fade up">또한 한글을 읽지 못하는 유아를 위해 <span class="f_orange">녹음</span>을 하여 게임을 진행 할 수 있도록 하였습니다.</p>
                             </div>
                             <div class="img_wrap">
                                 <img src="../assets/images/portfolio/parish.png" alt="AR인식교구 4개,안내서1장,가짜돈">
@@ -306,10 +306,10 @@
                             </div>
                         </div>
                         <div class="two">
-                            <p>AR을 인식하기 위해 필요한 <span class="f_orange">AR인식 교구</span> 입니다.<br>
+                            <p class="fade up">AR을 인식하기 위해 필요한 <span class="f_orange">AR인식 교구</span> 입니다.<br>
                                 이 교구를 세워 카메라에 비추어 인식 후 게임을 진행합니다.<br>
                                 각 장소마다 어울리도록 일러스트를 통해 디자인 하였습니다.</p>
-                            <div class="img_wrap">
+                            <div class="img_wrap fade left">
                                 <img src="../assets/images/portfolio/mart.png" alt="냉장고,케이크 진열대,사과와 바나나가 있는 선반,계산대가 있다">
                                 <img src="../assets/images/portfolio/toymart.png" alt="장난감들과 선물,농구골대,카드게임을 할 수 있는 테이블이 있다">
                                 <img src="../assets/images/portfolio/library.png" alt="초등학교 도서관처럼 책들과 대출/반납이 가능한 곳이 있다">
@@ -317,11 +317,11 @@
                             </div>
                         </div>
                         <div class="three">
-                            <p>대표 캐릭터를 활용하여 마트게임에서 활용 할 수 있는 지폐를 디자인 하였습니다.</p>
+                            <p class="fade up">대표 캐릭터를 활용하여 마트게임에서 활용 할 수 있는 지폐를 디자인 하였습니다.</p>
                             <div class="img_wrap">
-                                <img src="../assets/images/portfolio/money1.png" alt="세종대왕 대신 고양이캐릭터가 그려져있는 만원권">
-                                <img src="../assets/images/portfolio/money2.png" alt="율곡 이이 대신 고양이캐릭터가 그려져있는 오천원권">
-                                <img src="../assets/images/portfolio/money3.png" alt="퇴계 이황 대신 고양이캐릭터가 그려져있는 천원권">
+                                <img src="../assets/images/portfolio/money1.png" alt="세종대왕 대신 고양이캐릭터가 그려져있는 만원권" class="fade fd_right">
+                                <img src="../assets/images/portfolio/money2.png" alt="율곡 이이 대신 고양이캐릭터가 그려져있는 오천원권" class="fade fd_right">
+                                <img src="../assets/images/portfolio/money3.png" alt="퇴계 이황 대신 고양이캐릭터가 그려져있는 천원권" class="fade fd_right">
                             </div>
                         </div>
                         <div class="four">
