--- a/project/project.html
+++ b/project/project.html
@@ -161,7 +161,7 @@
                                     <p class="big">WHAT 재능기부</p>
                                     <p class="small">WHAT 재능기부</p>
                                 </div>
-                                <div class="right fade fd_right">
+                                <div class="right fade fd_left">
                                     <p class="title">본문</p>
                                     <p class="f_name">#Poppins</p>
                                     <p class="big">WHAT 재능기부</p>
