--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             <p>언제든지 편한시간에 연락주세요!</p>
         </article>
     </section>
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <div class="link">
+            <a href="https://github.com/NamHyunJu">Git hub</a>
+            <a href="https://www.youtube.com/channel/UCno9zIHLVtwBVunylUjyqXw/featured">youtube</a>
+        </div>
+    </footer>
 </body>
 </html>
