01-13 오전 12:46 업데이트

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <section id="content">
+        <h2 class="blind">남현주의 포트폴리오</h2>
         <article id="cnt1">
                 <h2>Let's become<br>
                     a publisher,<br>
@@ -33,6 +34,7 @@
                 <img src="assets/images/main/red_flower.svg" class="red_flower" alt="8개의 꽃잎이 있는 빨간꽃이 360도로 계속 회전하고 있다">
         </article>
         <article id="cnt2">
+            <h2 class="blind">포트폴리오의 네비게이션</h2>
             <div class="gnb">
                 <img class="blob" src="assets/images/common/nav_yellow_bg.png" alt="">
                 <ul id="indexGnb">
@@ -43,6 +45,7 @@
             </div>
         </article>
         <article id="cnt3">
+            <h2 class="blind">연락 할 이메일 주소 정보</h2>
             <p>저에대해 더 궁금하고<br>함께 나누고 싶은 이야기가 있으시다면</p>
             <a href="mailto:nam_guswn9845@naver.com" title="메일 보내기">nam_guswn9845@naver.com</a>
             <p>언제든지 편한시간에 연락주세요!</p>
