--- a/me/me.html
+++ b/me/me.html
@@ -21,6 +21,7 @@
     <header id="header" class="head"></header>
 
     <section id="meCnt">
+        <h2 class="blind">남현주 소개</h2>
         <article id="me">
             <div class="bg">
                 <img src="../assets/images/aboutme/dot_circle_bg.svg" alt="">
@@ -117,8 +118,8 @@
                 </div>
             </div>
             <div class="movetxt">
-                <marquee class="full" scrollamount=10  >HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</marquee>
-                <marquee class="line" scrollamount=10 direction=right>HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</marquee>
+                <p class="full">HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</p>
+                <p class="line">HTML CSS SASS jQUERY JAVASCRIPT BOOTSTRAP ILLUSTRATOR XD PHOTOSHOP ZEPLIN PREMIEREPRO AFTEREFFECTS GITHUB</p>
             </div>
         </article>
     </section>
