--- a/report/report.html
+++ b/report/report.html
@@ -20,6 +20,7 @@
     <header id="header" class="head"></header>
 
     <section id="report">
+        <h2 class="blind">웹접근성 보고서</h2>
         <article class="w1400">
             <h2 class="tit">REPORT</h2>
             <ul role="tablist" class="tablist">
