--- a/me/me.html
+++ b/me/me.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="ect">
                         <div class="hexagon">
-                            <strong>Ect</strong>
+                            <strong>Etc</strong>
                         </div>
                         <div class="txt">
                             <span>ZEPLIN</span>
